# pico_bare_blink

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: arm-none-eabi-gcc.cmake  gccDownloaderHelper.cmake  rp2040.cmake  toolchain.cmake
cmsis/: CMakeLists.txt
cmsis/core/inc/: cmsis_armcc.h  cmsis_armclang.h  cmsis_gcc.h  cmsis_version.h
cmsis/device/raspberrypi/rp2040/inc/: RP2040.h  rp2040.h
cmsis/device/raspberrypi/rp2040/src/: system_RP2040.cpp  system_rp2040.cpp
drivers/: CMakeLists.txt
drivers/clocks/: CMakeLists.txt  clocks.cpp  clocks.h
drivers/gpio/: gpio.h
drivers/interfaces/: i_clocks.h
drivers/reset/: CMakeLists.txt  reset.cpp  reset.h
inc/: bootrom.h  isr_vectors.h
linker/: crt0.S  memmap_default.ld
old/: bootrom.h  crt0.S  sio.h
rp2040/boot2/: boot2_w25q080.S  bs2_default_padded_checksummed.S
rp2040/cmsis/: CMakeLists.txt
rp2040/cmsis/core/inc/: cmsis_armclang_ltm.h  core_cm0plus.h
rp2040/cmsis/device/raspberrypi/rp2040/inc/: cmsis_rp2040.h  rp2040.h  system_rp2040.h
rp2040/drivers/: CMakeLists.txt
rp2040/drivers/clocks/: clocks.cpp
rp2040/drivers/gpio/: CMakeLists.txt  gpio.cpp
rp2040/drivers/inc/: utils.h
rp2040/drivers/interfaces/: i_gpio.h  i_timer.h
rp2040/drivers/reset/: CMakeLists.txt  reset.cpp
rp2040/drivers/timer/: CMakeLists.txt  timer.cpp  timer.h
src/: isr_vectors.cpp  main.c  main.cpp  startup.cpp
